# tcs_synth

./: .gitignore  Cargo.toml  build.rs  gettoken_tts.py  kopeek.pcm  mama.pcm  repeat.pcm  say_doc.pcm  test_tcs.pcm
src/: main.rs
