[package]
name = "tcs_synth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
chrono = "0.4"
dotenv = "0.15"
jsonwebtoken = "9"
reqwest = { version = "0.11.18", features = ["json"] }
serde_json = { version = "1.0.105" }
tokio = { version = "1.31.0", features = ["macros", "rt-multi-thread"] }
